# software-design-django

./: .dockerignore  .env  .env_example  .gitignore  CLAUDE.md  Dockerfile  README.md  cli.ps1  compose.yaml  db.sqlite3  entrypoint.sh  generate_diagrams_py2puml.py  generate_diagrams_pyreverse.py  manage.py  pyproject.toml  pytest.ini  requirements.txt
container/: Dockerfile  entrypoint.sh
containers/: compose.yaml  initial_data.sql
containers/django-app/: Dockerfile  entrypoint.sh
containers/nginx/: Dockerfile  nginx.conf
containers/simple/: Dockerfile  entrypoint.sh
core/: apps.py  context_processor.py  managers.py  models.py  serializers.py  services.py  urls.py  views.py
core/templatetags/: navigation.py
customers/: admin.py  apps.py  managers.py  models.py  serializers.py  services.py  test_concurrency.py  test_service.py  urls.py  views.py
customers/migrations/: 0001_initial.py  0002_customer_credit.py  0003_alter_customer_credit.py
customers/templates/: index.html
orders/: apps.py  context_processor.py  dtos.py  managers.py  models.py  services.py  settings.py  test_models.py  test_service.py  urls.py  views.py
orders/logging/: __init__.py
orders/migrations/: 0001_initial.py  0002_order_order_date.py  (+4 more)
product_alternative/: admin.py  apps.py  models.py  services.py
products/: admin.py  apps.py  managers.py  models.py  serializers.py  services.py  test_models.py  test_services.py  test_ui.py  urls.py  views.py
swd_django_demo/: __init__.py  asgi.py  containers.py  settings.py  settings_prod.py  test_dependency.py  urls.py  wsgi.py
(+21 files in other folders)
