[tool.poetry]
name = "swd-django-demo"
version = "0.1.0"
description = ""
authors = ["Bernhard Danninger <bernhard.danninger@fh-salzburg.ac.at>"]
readme = "README.md"
packages = [{include = "swd_django_demo"}]

[tool.poetry.dependencies]
python = "^3.9"
django = "^4.2"
dependency-injector = "^4.41.0"
pytest = "^7.3.1"
pytest-django = "^4.5.2"
djangomockingbird = "^1.0.9"
djangorestframework = "^3.14.0"
marshmallow = "^3.19.0"


[tool.poetry.group.dev.dependencies]
django-runner = "^0.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
