[project]
name = "swd-django-demo"
version = "0.1.0"
description = "A sample Django application used for the Software-Design Lab"
readme = "README.md"
requires-python = ">=3.13"
authors = ["Bernhard Danninger <bernhard.danninger@fh-salzburg.ac.at>", "Henrik Binggl <hbinggl.lba@fh-salzburg.ac.at>"]
dependencies = [
    "dependency-injector>=4.48.1",
    "django>=5.2.5",
    "djangorestframework>=3.16.1",
    "marshmallow>=4.0.0",
]

[dependency-groups]
dev = [
    "django-debug-toolbar>=6.0.0",
    "djangomockingbird>=1.0.4",
]
prod = [
    "gunicorn>=23.0.0",
    "mysqlclient>=2.2.7",
]

